# game-of-life

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/: config_manager.hpp  game_view.hpp  include.hpp
liblifegame/: CMakeLists.txt
liblifegame/include/: game_of_life.hpp  game_of_life_printer.hpp  pair_2_uint.hpp
liblifegame/src/: game_of_life.cpp  game_of_life_printer.cpp  pair_2_uint.cpp
src/: config_manager.cpp  game_view.cpp  main.cpp
test/: CMakeLists.txt  liblifegame_test.cpp
